menu bar update test

--- a/clubs.html
+++ b/clubs.html
@@ -788,7 +788,7 @@
                         <div class="club-content-x" id="club-close"></div>
                         <div class="club-content-text">
                             <img class="club-content-photo" src="./img/club/hyperloop2.png">
-                            <div class="club-content-name">WE Trillium Hyperloop</div><br>
+                            <div class="club-content-name">WE Trillium Hyperloop</div>
                             <div class="club-content-description">
                                 Trillium Hyperloop is a team of students from Western University focused on innovating,
                                 designing, and building a Hyperloop pod to compete at the SpaceX competition in 2022. WE
