--- a/commissioner.html
+++ b/commissioner.html
@@ -95,7 +95,6 @@
         </div>
         <ol>
             <div class="mobile-menu-items" id="menu-mobile">
-
                 <li class="mobile-menu-item">
                     <a class="mobile-menu-top-item">Western</a>
                     <div class="mobile-menu-dropdown">
@@ -158,10 +157,135 @@
         </ol>
     </div>
 
-    <!-- SUSTAINABILITY  -->
     
+    <!-- COUNCIL TEAM -->
+    <div class="title team-title" id="council">2021-2022 Council</div><br>
+    <div class="council-container">
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
+    </div>
 
+    <!-- YEAR REPS -->
+    <div class="title team-title" id="yearrep">Year Reps</div><br>
+    <div class="council-container">
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
+    </div>
 
+    <!-- Commissioners and Directors -->
+    <div class="title team-title" id="commissioner">Commissioners and Directors</div><br>
+    <div class="council-container">
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
+    </div>
+
+    <!-- Committee Members -->
+    <div class="title team-title" id="committee">Committee Members</div><br>
+    <div class="council-container">
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
+    </div>
+    
     <!-- FOOTER -->
     <div class="footer">
         <a href="/" class="footer-image">
@@ -184,4 +308,4 @@
 
 </body>
 
-</htm
+</html>
