--- a/team.html
+++ b/team.html
@@ -161,69 +161,117 @@
 
     <!-- TEAMS -->
 
-    <div class="team-intro"> 
+    <div class="team-intro">
         <div></div>
     </div>
 
     <!-- EXEC TEAM -->
-    <div class="title team-title" id="exec">Executive Team</div><br>
+    <div class="title team-title" id="exec">2021 Executive Team</div><br>
     <div class="team-container">
         <div class="exec-card">
-            <div class="exec-photo" style="background-image: url(./img/shop/jacket2.jpg)"></div>
-            <div class="exec-name">Chris Mohan</div>
-            <div class="exec-position">President</div>
-            <div class="exec-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque auctor
-                tincidunt tortor eu porta. Maecenas quis mi risus. Quisque rutrum, velit posuere aliquam dictum, urna
-                mauris sagittis nisi, quis gravida elit metus vel sem. Praesent bibendum convallis auctor. Nullam
-                co
+            <div class="exec-photo" style="background-image: url(./img/team/Jack\ Peplinski.png)"></div>
+            <div class="exec-text">
+                <div class="exec-position">President</div>
+                <div class="exec-name">Chris Mohan</div>
+                <div class="exec-description">
+                    <p>
+                        <strong>About Me:</strong>
+                        I’m in my fourth year of Software Engineering and iVeY. When I’m not studying/chilling in the
+                        UES Lounge, I’m usually at the Spoke (my order is ham & swiss on asiago sourdough). On Wednesday
+                        nights you will (almost certainly) find me at the Spoke singing along to the one and only Rick
+                        McGhie. I love the Spoke- did I mention that (@thewaveandspoke pls sponsor me)
+
+                        For the newcomers, welcome to the family- and to everyone else, welcome back! I can assure you
+                        this is going to be an exciting year for engineering and I hope to meet you all soon (hopefully
+                        in-person!) Feel free to reach out to me on instagram (@christophermohan) or via email
+                        (ues.prez@uwo.ca)
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="exec-card">
+            <div class="exec-photo" style="background-image: url(./img/team/Jack\ Peplinski.png)"></div>
+            <div class="exec-text">
+                <div class="exec-position">VP</div>
+                <div class="exec-name">Chris Mohan</div>
+                <div class="exec-description">
+                    <p>
+                        <strong>About Me:</strong>
+                        I’m in my fourth year of Software Engineering and iVeY. When I’m not studying/chilling in the
+                        UES Lounge, I’m usually at the Spoke (my order is ham & swiss on asiago sourdough). On Wednesday
+                        nights you will (almost certainly) find me at the Spoke singing along to the one and only Rick
+                        McGhie. I love the Spoke- did I mention that (@thewaveandspoke pls sponsor me)
+
+                        For the newcomers, welcome to the family- and to everyone else, welcome back! I can assure you
+                        this is going to be an exciting year for engineering and I hope to meet you all soon (hopefully
+                        in-person!) Feel free to reach out to me on instagram (@christophermohan) or via email
+                        (ues.prez@uwo.ca)
+                    </p>
+                </div>
             </div>
         </div>
         <div class="exec-card">
-            <div class="exec-photo" style="background-image: url(./img/shop/jacket2.jpg)"></div>
-            <div class="exec-name">Chris Mohan</div>
-            <div class="exec-position">President</div>
-            <div class="exec-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque auctor
-                tincidunt tortor eu porta. Maecenas quis mi risus. Quisque rutrum, velit posuere aliquam dictum, urna
-                mauris sagittis nisi, quis gravida elit metus vel sem. Praesent bibendum convallis auctor. Nullam
-                condimentum, tellus at laoreet sodales, ligula massa lacinia dui, vel venenatis mi massa eu mi. Sed eget
-                arcu finibus, viverra massa sed, tincidunt ante. Mauris fringilla, nisl eget iaculis luctus, lorem lacus
-                tempus justo, id facilisis turpis elit ac dolor. Duis eu mollis magna.
+            <div class="exec-photo" style="background-image: url(./img/team/Jack\ Peplinski.png)"></div>
+            <div class="exec-text">
+                <div class="exec-position">President</div>
+                <div class="exec-name">Chris Mohan</div>
+                <div class="exec-description">
+                    <p>
+                        <strong>About Me:</strong>
+                        I’m in my fourth year of Software Engineering and iVeY. When I’m not studying/chilling in the
+                        UES Lounge, I’m usually at the Spoke (my order is ham & swiss on asiago sourdough). On Wednesday
+                        nights you will (almost certainly) find me at the Spoke singing along to the one and only Rick
+                        McGhie. I love the Spoke- did I mention that (@thewaveandspoke pls sponsor me)
+
+                        For the newcomers, welcome to the family- and to everyone else, welcome back! I can assure you
+                        this is going to be an exciting year for engineering and I hope to meet you all soon (hopefully
+                        in-person!) Feel free to reach out to me on instagram (@christophermohan) or via email
+                        (ues.prez@uwo.ca)
+                    </p>
+                </div>
             </div>
         </div>
         <div class="exec-card">
-            <div class="exec-photo" style="background-image: url(./img/shop/jacket2.jpg)"></div>
-            <div class="exec-name">Chris Mohan</div>
-            <div class="exec-position">President</div>
-            <div class="exec-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque auctor
-                tincidunt tortor eu porta. Maecenas quis mi risus. Quisque rutrum, velit posuere aliquam dictum, urna
-                mauris sagittis nisi, quis gravida elit metus vel sem. Praesent bibendum convallis auctor. Nullam
-                condimentum, tellus at laoreet sodales, ligula massa lacinia dui, vel venenatis mi massa eu mi. Sed eget
-                arcu finibus, viverra massa sed, tincidunt ante. Mauris fringilla, nisl eget iaculis luctus, lorem lacus
-                tempus justo, id facilisis turpis elit ac dolor. Duis eu mollis magna.
+            <div class="exec-photo" style="background-image: url(./img/team/Jack\ Peplinski.png)"></div>
+            <div class="exec-text">
+                <div class="exec-position">President</div>
+                <div class="exec-name">Chris Mohan</div>
+                <div class="exec-description">
+                    <p>
+                        <strong>About Me:</strong>
+                        I’m in my fourth year of Software Engineering and iVeY. When I’m not studying/chilling in the
+                        UES Lounge, I’m usually at the Spoke (my order is ham & swiss on asiago sourdough). On Wednesday
+                        nights you will (almost certainly) find me at the Spoke singing along to the one and only Rick
+                        McGhie. I love the Spoke- did I mention that (@thewaveandspoke pls sponsor me)
+
+                        For the newcomers, welcome to the family- and to everyone else, welcome back! I can assure you
+                        this is going to be an exciting year for engineering and I hope to meet you all soon (hopefully
+                        in-person!) Feel free to reach out to me on instagram (@christophermohan) or via email
+                        (ues.prez@uwo.ca)
+                    </p>
+                </div>
             </div>
         </div>
         <div class="exec-card">
-            <div class="exec-photo" style="background-image: url(./img/shop/jacket2.jpg)"></div>
-            <div class="exec-name">Chris Mohan</div>
-            <div class="exec-position">President</div>
-            <div class="exec-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque auctor
-                tincidunt tortor eu porta. Maecenas quis mi risus. Quisque rutrum, velit posuere aliquam dictum, urna
-                mauris sagittis nisi, quis gravida elit metus vel sem. Praesent bibendum convallis auctor. Nullam
-                condimentum, tellus at laoreet sodales, ligula massa lacinia dui, vel venenatis mi massa eu mi. Sed eget
-                arcu finibus, viverra massa sed, tincidunt ante. Mauris fringilla, nisl eget iaculis luctus, lorem lacus
-                tempus justo, id facilisis turpis elit ac dolor. Duis eu mollis magna.
-            </div>
-        </div>
-        <div class="exec-card">
-            <div class="exec-photo" style="background-image: url(./img/shop/jacket2.jpg)"></div>
-            <div class="exec-name">Chris Mohan</div>
-            <div class="exec-position">President</div>
-            <div class="exec-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque auctor
-                tincidunt tortor eu porta. Maecenas quis mi risus. Quisque rutrum, velit posuere aliquam dictum, urna
-                mauris sagittis nisi, quis gravida elit metus vel sem. Praesent bibendum convallis auctor. Nullam
-                condimentum, tellus at laoreet sodales, ligula massa lacinia dui, vel venenatis mi massa eu mi. Sed eget
-                arcu finibus, viverra massa sed, tincidunt ante. Mauris fringilla, nisl eget iaculis luctus, lorem lacus
-                tempus justo, id facilisis turpis elit ac dolor. Duis eu mollis magna.
+            <div class="exec-photo" style="background-image: url(./img/team/Jack\ Peplinski.png)"></div>
+            <div class="exec-text">
+                <div class="exec-position">President</div>
+                <div class="exec-name">Chris Mohan</div>
+                <div class="exec-description">
+                    <p>
+                        <strong>About Me:</strong>
+                        I’m in my fourth year of Software Engineering and iVeY. When I’m not studying/chilling in the
+                        UES Lounge, I’m usually at the Spoke (my order is ham & swiss on asiago sourdough). On Wednesday
+                        nights you will (almost certainly) find me at the Spoke singing along to the one and only Rick
+                        McGhie. I love the Spoke- did I mention that (@thewaveandspoke pls sponsor me)
+
+                        For the newcomers, welcome to the family- and to everyone else, welcome back! I can assure you
+                        this is going to be an exciting year for engineering and I hope to meet you all soon (hopefully
+                        in-person!) Feel free to reach out to me on instagram (@christophermohan) or via email
+                        (ues.prez@uwo.ca)
+                    </p>
+                </div>
             </div>
         </div>
     </div>
@@ -300,7 +348,7 @@
     </div>
 
     <!-- Commissioners and Directors -->
-    <div class="title team-title" id="council">Commissioners and Directors</div><br>
+    <div class="title team-title" id="commissioner">Commissioners and Directors</div><br>
     <div class="council-container">
         <div class="council-card">
             <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
@@ -335,7 +383,7 @@
     </div>
 
     <!-- Committee Members -->
-    <div class="title team-title" id="council">Committee Members</div><br>
+    <div class="title team-title" id="committee">Committee Members</div><br>
     <div class="council-container">
         <div class="council-card">
             <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
@@ -393,4 +441,4 @@
 
 </body>
 
-</htm
+</html>
