--- a/wellness.html
+++ b/wellness.html
@@ -4,79 +4,79 @@
 
 <head>
     <meta charset="utf-8">
-
     <title>Western UES</title>
     <meta name="description" content="Western UES">
     <meta name="author" content="UES">
-
-    <link rel="stylesheet" href="css/styles.css?v=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/styles.css?v=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+    <link rel="manifest" href="./site.webmanifest">
 </head>
 
 <body>
     <!-- MENU -->
     <div class="menu-container">
         <ol>
-            <a href="/"><img src="img/logo.png" class="menu-image"></a>
+            <a href="./"><img src="img/logo.png" class="menu-image"></a>
             <div class="menu-items">
                 <li id="menu-about">
-                    <a href="/about" class="menu-top-item">Western</a>
+                    <a href="./about" class="menu-top-item">Western</a>
                     <div class="menu-dropdown" id="western-dropdown">
-                        <div class="dropdown-item"><a href="/about">About Us</a></div>
-                        <div class="dropdown-item"><a href="/about#culture">Culture</a></div>
-                        <div class="dropdown-item menu-bottom-item"><a href="/about#contact">Contact Us</a></div>
+                        <div class="dropdown-item"><a href="./about">About Us</a></div>
+                        <div class="dropdown-item"><a href="./about#culture">Culture</a></div>
+                        <div class="dropdown-item menu-bottom-item"><a href="./about#contact">Contact Us</a></div>
                     </div>
                 </li>
                 <li id="menu-join">
-                    <a href="/join" class="menu-top-item">Join Us</a>
+                    <a href="./join" class="menu-top-item">Join Us</a>
                     <div class="menu-dropdown" id="join-dropdown">
-                        <div class="dropdown-item"><a href="/clubs">Clubs</a></div>
-                        <div class="dropdown-item"><a href="">Conferences</a></div>
-                        <div class="dropdown-item"><a href="">Events</a></div>
-                        <div class="dropdown-item"><a href="">Wellness Committee</a></div>
-                        <div class="dropdown-item"><a href="">Sustainability Committee</a></div>
-                        <div class="dropdown-item"><a href="">Discord Committee</a></div>
-                        <div class="dropdown-item menu-bottom-item"><a href="">Blogs</a></div>
+                        <div class="dropdown-item"><a href="./clubs">Clubs</a></div>
+                        <div class="dropdown-item"><a href="./join">Conferences</a></div>
+                        <div class="dropdown-item"><a href="./events">Events</a></div>
+                        <div class="dropdown-item"><a href="./wellness">Wellness Committee</a></div>
+                        <div class="dropdown-item"><a href="./environment">Sustainability Committee</a></div>
+                        <div class="dropdown-item"><a href="https://discord.gg/b8EfQSKKbK">Discord Committee</a></div>
+                        <div class="dropdown-item menu-bottom-item"><a href="./join#blog">Blogs</a></div>
                     </div>
                 </li>
                 <li id="menu-council">
-                    <a href="/team" class="menu-top-item">Council</a>
+                    <a href="./team" class="menu-top-item">Council</a>
                     <div class="menu-dropdown" id="council-dropdown">
-                        <div class="dropdown-item"><a href="/team">Operations</a></div>
-                        <div class="dropdown-item"><a href="/team">Our Team</a></div>
-                        <div class="dropdown-item menu-bottom-item"><a href="">Elections</a></div>
+                        <div class="dropdown-item"><a href="./team">Operations</a></div>
+                        <div class="dropdown-item"><a href="./team">Our Team</a></div>
+                        <div class="dropdown-item menu-bottom-item"><a href="./team#elections">Elections</a></div>
                     </div>
                 </li>
                 <li id="menu-admin">
-                    <a href="/admin" class="menu-top-item">Admin</a>
+                    <a href="./admin" class="menu-top-item">Admin</a>
                     <div class="menu-dropdown" id="admin-dropdown">
-                        <div class="dropdown-item"><a href="/team">Council Resources</a></div>
-                        <div class="dropdown-item"><a href="/team">Exec Updates</a></div>
+                        <div class="dropdown-item"><a href="./team">Council Resources</a></div>
+                        <div class="dropdown-item"><a href="team">Exec Updates</a></div>
                         <div class="dropdown-item"><a href="">Finances</a></div>
                         <div class="dropdown-item"><a href="">Governing Docs</a></div>
                         <div class="dropdown-item menu-bottom-item"><a href="">SRA</a></div>
                 </li>
                 <li id="menu-store">
-                    <a href="/store" class="menu-top-item">Eng Merch</a>
+                    <a href="store" class="menu-top-item">Eng Merch</a>
                     <div class="menu-dropdown" id="store-dropdown">
-                        <div class="dropdown-item"><a href="/shop">+/- Store</a></div>
-                        <div class="dropdown-item"><a href="/jacket">Boilersuits</a></div>
-                        <div class="dropdown-item menu-bottom-item"><a href="/jacket">Eng Jackets</a></div>
+                        <div class="dropdown-item"><a href="shop">+/- Store</a></div>
+                        <div class="dropdown-item"><a href="jacket#boilersuit">Boilersuits</a></div>
+                        <div class="dropdown-item menu-bottom-item"><a href="jacket">Eng Jackets</a></div>
                     </div>
                 </li>
                 <li id="menu-coop">
-                    <a href="/coop" class="menu-top-item">Co-op</a>
+                    <a href="coop" class="menu-top-item">Co-op</a>
                     <div class="menu-dropdown" id="coop-dropdown">
                         <div class="dropdown-item menu-bottom-item"><a href="">Academic Resources</a></div>
                     </div>
                 </li>
                 <li id="menu-campaign">
-                    <a href="/campaign" class="menu-top-item">EDI</a>
+                    <a href="campaign" class="menu-top-item">EDI</a>
                     <div class="menu-dropdown" id="campaign-dropdown">
                         <div class="dropdown-item menu-bottom-item"><a href="">Action Plan</a></div>
                     </div>
@@ -99,58 +99,59 @@
                 <li class="mobile-menu-item">
                     <a class="mobile-menu-top-item">Western</a>
                     <div class="mobile-menu-dropdown">
-                        <div class="mobile-dropdown-item"><a href="/about">About Us</a></div>
-                        <div class="mobile-dropdown-item"><a href="/about#culture">Culture</a></div>
-                        <div class="mobile-dropdown-item"><a href="/about#contact">Contact Us</a></div>
+                        <div class="mobile-dropdown-item"><a href="about">About Us</a></div>
+                        <div class="mobile-dropdown-item"><a href="about#culture">Culture</a></div>
+                        <div class="mobile-dropdown-item"><a href="about#contact">Contact Us</a></div>
                     </div>
                 </li>
                 <li class="mobile-menu-item">
                     <a class="mobile-menu-top-item">Join Us</a>
                     <div class="mobile-menu-dropdown">
-                        <div class="mobile-dropdown-item"><a href="/clubs">Clubs</a></div>
-                        <div class="mobile-dropdown-item"><a href="/join">Conferences</a></div>
-                        <div class="mobile-dropdown-item"><a href="/events">Events</a></div>
-                        <div class="mobile-dropdown-item"><a href="/wellness">Wellness Committee</a></div>
-                        <div class="mobile-dropdown-item"><a href="/sustainability">Sustainability Committee</a></div>
-                        <div class="mobile-dropdown-item"><a href="/discord">Discord Committee</a></div>
-                        <div class="mobile-dropdown-item"><a href="/join#blog">Blogs</a></div>
+                        <div class="mobile-dropdown-item"><a href="clubs">Clubs</a></div>
+                        <div class="mobile-dropdown-item"><a href="join">Conferences</a></div>
+                        <div class="mobile-dropdown-item"><a href="events">Events</a></div>
+                        <div class="mobile-dropdown-item"><a href="wellness">Wellness Committee</a></div>
+                        <div class="mobile-dropdown-item"><a href="sustainability">Sustainability Committee</a></div>
+                        <div class="mobile-dropdown-item"><a href="https://discord.gg/b8EfQSKKbK">Discord Committee</a>
+                        </div>
+                        <div class="mobile-dropdown-item"><a href="join#blog">Blogs</a></div>
                     </div>
                 </li>
                 <li class="mobile-menu-item">
                     <a class="mobile-menu-top-item">Council</a>
                     <div class="mobile-menu-dropdown">
-                        <div class="mobile-dropdown-item"><a href="/team">Operations</a></div>
-                        <div class="mobile-dropdown-item"><a href="/team">Our Team</a></div>
-                        <div class="mobile-dropdown-item"><a href="/team">Elections</a></div>
+                        <div class="mobile-dropdown-item"><a href="team">Operations</a></div>
+                        <div class="mobile-dropdown-item"><a href="team">Our Team</a></div>
+                        <div class="mobile-dropdown-item"><a href="team">Elections</a></div>
                     </div>
                 </li>
                 <li class="mobile-menu-item">
                     <a class="mobile-menu-top-item">Admin</a>
                     <div class="mobile-menu-dropdown">
-                        <div class="mobile-dropdown-item"><a href="/admin">Council Resources</a></div>
-                        <div class="mobile-dropdown-item"><a href="/admin">Exec Updates</a></div>
-                        <div class="mobile-dropdown-item"><a href="/admin">Finances</a></div>
-                        <div class="mobile-dropdown-item"><a href="/admin">Governing Docs</a></div>
-                        <div class="mobile-dropdown-item"><a href="/admin">SRA</a></div>
+                        <div class="mobile-dropdown-item"><a href="admin">Council Resources</a></div>
+                        <div class="mobile-dropdown-item"><a href="admin">Exec Updates</a></div>
+                        <div class="mobile-dropdown-item"><a href="admin">Finances</a></div>
+                        <div class="mobile-dropdown-item"><a href="admin">Governing Docs</a></div>
+                        <div class="mobile-dropdown-item"><a href="admin">SRA</a></div>
                 </li>
                 <li class="mobile-menu-item">
                     <a class="mobile-menu-top-item">Eng Merch</a>
                     <div class="mobile-menu-dropdown">
-                        <div class="mobile-dropdown-item"><a href="/shop">+/- Store</a></div>
-                        <div class="mobile-dropdown-item"><a href="/jacket">Boilersuits</a></div>
-                        <div class="mobile-dropdown-item"><a href="/jacket">Eng Jackets</a></div>
+                        <div class="mobile-dropdown-item"><a href="shop">+/- Store</a></div>
+                        <div class="mobile-dropdown-item"><a href="jacket">Boilersuits</a></div>
+                        <div class="mobile-dropdown-item"><a href="jacket">Eng Jackets</a></div>
                     </div>
                 </li>
                 <li class="mobile-menu-item">
                     <a class="mobile-menu-top-item">Co-op</a>
                     <div class="mobile-menu-dropdown">
-                        <div class="mobile-dropdown-item"><a href="/coop">Academic Resources</a></div>
+                        <div class="mobile-dropdown-item"><a href="coop">Academic Resources</a></div>
                     </div>
                 </li>
                 <li class="mobile-menu-item">
                     <a class="mobile-menu-top-item">EDI</a>
                     <div class="mobile-menu-dropdown" id="campaign-dropdown-mobile">
-                        <div class="mobile-dropdown-item mobile-menu-bottom-item"><a href="/action">Action Plan</a>
+                        <div class="mobile-dropdown-item mobile-menu-bottom-item"><a href="action">Action Plan</a>
                         </div>
                     </div>
                 </li>
@@ -159,7 +160,71 @@
     </div>
 
     <!-- WELLNESS -->
+    <div class="wellness-container">
+        <img class="wellness-logo">
 
+        <div class="wellness-about">
+            <div class="title wellness-title">About the Wellness Force</div>
+            The UES Wellness Force is a committee dedicated to encouraging Western Engineering students to practice
+            well-being through social media, events, and by sharing key resources. We want to be able to help you
+            cultivate your personal wellness.
+            <br>
+            It is important to recognize that there are many areas that contribute to your wellness, including
+            emotional, occupational, physical, social, intellectual, and spiritual dimensions. Each individual needs to
+            support their wellness dimensions differently.
+            <br>
+            Always speak up if you, or someone you may know, needs help. It can feel overwhelming to ask for help for
+            yourself or someone else, but you are supported by the community and you are doing the right thing.
+        </div>
+
+        <div class="wellness-resources">
+            <div class="title wellness-title">Resources</div>
+            In Crisis: If you need help now, call Reach Out at 1 (866) 933-2023. Reach Out is a 24/7 crisis response
+            service. Additional resources and options can be found here:
+            https://www.uwo.ca/health/psych/crisis_counselling.html
+            <br>
+            Refer Yourself: Western offers a variety of mental health services, including counselling and support groups
+            for grief, eating disorders, and much more. If you are struggling or feel overwhelmed, check out this link:
+            https://www.uwo.ca/health/enhance_wellness/index.html
+            <br>
+            Refer Others: If someone you know is displaying direct or indirect references to suicide, threats,
+            disruptive behaviours, disordered eating, or drug and alcohol misuse, refer them to get help through the
+            following steps: https://www.uwo.ca/health/mental_wellbeing/others/referrals.html
+            <br>
+            Additional Mental Health Resources: If this is not a crisis, check out this link to see all of the options
+            made available to you: https://www.uwo.ca/health/mental_wellbeing/resources.html
+            <br>
+            Intramurals: Western offers a variety of intramurals, including innertube water polo, hockey, dodgeball, and
+            more. Register and view your options here: https://www.uwo.ca/campusrec/intramurals/how_to_register.html
+            <br>
+            Rec Centre Classes: Western offers a variety of exercise classes you can sign up for, including fitness
+            classes, dance classes, aquatic classes, and so much more. Check out your options here:
+            https://www.uwo.ca/campusrec/programs/index.html
+            <br>
+            Rec Center Information: As a Western student, you can workout in the rec center at no additional cost. Find
+            out more information about the rec center here: https://www.uwo.ca/campusrec/
+            <br>
+            Academic and General Support: If you require academic or any additional support, do not hesitate to contact
+            Undergraduate Services. You can book an appointment and they will be able to help you. You can find them
+            here: https://www.eng.uwo.ca/undergraduate/index.html
+            <br>
+            The UES Wellness Force has additional resources and we can point you in the right direction if you are
+            unsure where to start. Feel free to get into contact with us if you have any questions.
+        </div>
+
+        <div class="wellness-socials">
+            <div class="wellness-social-card">
+                <img class="wellness-social-logo" src="./img/ig.png">
+            </div>
+            <div class="wellness-social-card">
+                <img class="wellness-social-logo" src="./img/fb.png">
+            </div>
+            <div class="wellness-social-card">
+                <img class="wellness-social-logo" src="./img/blog.png">
+            </div>
+        </div>
+
+    </div>
 
     <!-- FOOTER -->
     <div class="footer">
