--- a/index.html
+++ b/index.html
@@ -45,40 +45,41 @@
                     </div>
                 </li>
                 <li id="menu-council">
-                    <a href="./team" class="menu-top-item">Council</a>
+                    <a href="./team" class="menu-top-item">Team</a>
                     <div class="menu-dropdown" id="council-dropdown">
-                        <div class="dropdown-item"><a href="./team">Operations</a></div>
-                        <div class="dropdown-item"><a href="./team">Our Team</a></div>
-                        <div class="dropdown-item menu-bottom-item"><a href="./team#elections">Elections</a></div>
+                        <div class="dropdown-item"><a href="./team">Executives</a></div>
+                        <div class="dropdown-item"><a href="./commissioner#council">Council Members</a></div>
+                        <div class="dropdown-item"><a href="./commissioner#commissioner">Commissioners</a></div>
+                        <div class="dropdown-item menu-bottom-item"><a href="./commissioner#committee">Committee Members</a></div>
                     </div>
                 </li>
                 <li id="menu-admin">
                     <a href="./admin" class="menu-top-item">Admin</a>
                     <div class="menu-dropdown" id="admin-dropdown">
-                        <div class="dropdown-item"><a href="./team">Council Resources</a></div>
-                        <div class="dropdown-item"><a href="team">Exec Updates</a></div>
-                        <div class="dropdown-item"><a href="">Finances</a></div>
-                        <div class="dropdown-item"><a href="">Governing Docs</a></div>
-                        <div class="dropdown-item menu-bottom-item"><a href="">SRA</a></div>
+                        <div class="dropdown-item"><a href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">Council Resources</a></div>
+                        <div class="dropdown-item"><a href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">Exec Updates</a></div>
+                        <div class="dropdown-item"><a href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">Finances</a></div>
+                        <div class="dropdown-item"><a href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">Governing Docs</a></div>
+                        <div class="dropdown-item menu-bottom-item"><a href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">SRA</a></div>
                 </li>
                 <li id="menu-store">
-                    <a href="store" class="menu-top-item">Eng Merch</a>
+                    <a href="./store" class="menu-top-item">Eng Merch</a>
                     <div class="menu-dropdown" id="store-dropdown">
-                        <div class="dropdown-item"><a href="shop">+/- Store</a></div>
-                        <div class="dropdown-item"><a href="jacket#boilersuit">Boilersuits</a></div>
-                        <div class="dropdown-item menu-bottom-item"><a href="jacket">Eng Jackets</a></div>
+                        <div class="dropdown-item"><a href="./shop">+/- Store</a></div>
+                        <div class="dropdown-item"><a href="./jacket#boilersuit">Boilersuits</a></div>
+                        <div class="dropdown-item menu-bottom-item"><a href="./jacket">Eng Jackets</a></div>
                     </div>
                 </li>
                 <li id="menu-coop">
-                    <a href="coop" class="menu-top-item">Co-op</a>
+                    <a href="./coop" class="menu-top-item">Co-op</a>
                     <div class="menu-dropdown" id="coop-dropdown">
-                        <div class="dropdown-item menu-bottom-item"><a href="">Academic Resources</a></div>
+                        <div class="dropdown-item menu-bottom-item"><a href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">Academic Resources</a></div>
                     </div>
                 </li>
                 <li id="menu-campaign">
-                    <a href="campaign" class="menu-top-item">EDI</a>
+                    <a href="./campaign" class="menu-top-item">EDI</a>
                     <div class="menu-dropdown" id="campaign-dropdown">
-                        <div class="dropdown-item menu-bottom-item"><a href="">Action Plan</a></div>
+                        <div class="dropdown-item menu-bottom-item"><a href="./action">Action Plan</a></div>
                     </div>
                 </li>
             </div>
@@ -99,59 +100,60 @@
                 <li class="mobile-menu-item">
                     <a class="mobile-menu-top-item">Western</a>
                     <div class="mobile-menu-dropdown">
-                        <div class="mobile-dropdown-item"><a href="about">About Us</a></div>
-                        <div class="mobile-dropdown-item"><a href="about#culture">Culture</a></div>
-                        <div class="mobile-dropdown-item"><a href="about#contact">Contact Us</a></div>
+                        <div class="mobile-dropdown-item"><a href="./about">About Us</a></div>
+                        <div class="mobile-dropdown-item"><a href="./about#culture">Culture</a></div>
+                        <div class="mobile-dropdown-item"><a href="./about#contact">Contact Us</a></div>
                     </div>
                 </li>
                 <li class="mobile-menu-item">
                     <a class="mobile-menu-top-item">Join Us</a>
                     <div class="mobile-menu-dropdown">
-                        <div class="mobile-dropdown-item"><a href="clubs">Clubs</a></div>
-                        <div class="mobile-dropdown-item"><a href="join">Conferences</a></div>
-                        <div class="mobile-dropdown-item"><a href="events">Events</a></div>
-                        <div class="mobile-dropdown-item"><a href="wellness">Wellness Committee</a></div>
-                        <div class="mobile-dropdown-item"><a href="sustainability">Sustainability Committee</a></div>
+                        <div class="mobile-dropdown-item"><a href="./clubs">Clubs</a></div>
+                        <div class="mobile-dropdown-item"><a href="./join">Conferences</a></div>
+                        <div class="mobile-dropdown-item"><a href="./events">Events</a></div>
+                        <div class="mobile-dropdown-item"><a href="./wellness">Wellness Committee</a></div>
+                        <div class="mobile-dropdown-item"><a href="./sustainability">Sustainability Committee</a></div>
                         <div class="mobile-dropdown-item"><a href="https://discord.gg/b8EfQSKKbK">Discord Committee</a>
                         </div>
-                        <div class="mobile-dropdown-item"><a href="join#blog">Blogs</a></div>
+                        <div class="mobile-dropdown-item"><a href="./join#blog">Blogs</a></div>
                     </div>
                 </li>
                 <li class="mobile-menu-item">
-                    <a class="mobile-menu-top-item">Council</a>
+                    <a class="mobile-menu-top-item">Team</a>
                     <div class="mobile-menu-dropdown">
-                        <div class="mobile-dropdown-item"><a href="team">Operations</a></div>
-                        <div class="mobile-dropdown-item"><a href="team">Our Team</a></div>
-                        <div class="mobile-dropdown-item"><a href="team">Elections</a></div>
+                        <div class="mobile-dropdown-item"><a href="./team">Executives</a></div>
+                        <div class="mobile-dropdown-item"><a href="./team">Council Members</a></div>
+                        <div class="mobile-dropdown-item"><a href="./team#commissioner">Commissioners & Directors</a></div>
+                        <div class="mobile-dropdown-item"><a href="./team#committee">Committee Members</a></div>
                     </div>
                 </li>
                 <li class="mobile-menu-item">
                     <a class="mobile-menu-top-item">Admin</a>
                     <div class="mobile-menu-dropdown">
-                        <div class="mobile-dropdown-item"><a href="admin">Council Resources</a></div>
-                        <div class="mobile-dropdown-item"><a href="admin">Exec Updates</a></div>
-                        <div class="mobile-dropdown-item"><a href="admin">Finances</a></div>
-                        <div class="mobile-dropdown-item"><a href="admin">Governing Docs</a></div>
-                        <div class="mobile-dropdown-item"><a href="admin">SRA</a></div>
+                        <div class="mobile-dropdown-item"><a href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">Council Resources</a></div>
+                        <div class="mobile-dropdown-item"><a href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">Exec Updates</a></div>
+                        <div class="mobile-dropdown-item"><a href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">Finances</a></div>
+                        <div class="mobile-dropdown-item"><a href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">Governing Docs</a></div>
+                        <div class="mobile-dropdown-item"><a href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">SRA</a></div>
                 </li>
                 <li class="mobile-menu-item">
                     <a class="mobile-menu-top-item">Eng Merch</a>
                     <div class="mobile-menu-dropdown">
-                        <div class="mobile-dropdown-item"><a href="shop">+/- Store</a></div>
-                        <div class="mobile-dropdown-item"><a href="jacket">Boilersuits</a></div>
-                        <div class="mobile-dropdown-item"><a href="jacket">Eng Jackets</a></div>
+                        <div class="mobile-dropdown-item"><a href="./shop">+/- Store</a></div>
+                        <div class="mobile-dropdown-item"><a href="./jacket#boilersuit">Boilersuits</a></div>
+                        <div class="mobile-dropdown-item"><a href="./jacket">Eng Jackets</a></div>
                     </div>
                 </li>
                 <li class="mobile-menu-item">
                     <a class="mobile-menu-top-item">Co-op</a>
                     <div class="mobile-menu-dropdown">
-                        <div class="mobile-dropdown-item"><a href="coop">Academic Resources</a></div>
+                        <div class="mobile-dropdown-item"><a href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">Academic Resources</a></div>
                     </div>
                 </li>
                 <li class="mobile-menu-item">
                     <a class="mobile-menu-top-item">EDI</a>
                     <div class="mobile-menu-dropdown" id="campaign-dropdown-mobile">
-                        <div class="mobile-dropdown-item mobile-menu-bottom-item"><a href="action">Action Plan</a>
+                        <div class="mobile-dropdown-item mobile-menu-bottom-item"><a href="./action">Action Plan</a>
                         </div>
                     </div>
                 </li>
